[package]
name = "toride-updates"
version = "0.1.0"
edition = "2024"
description = "Automatic security update management for Linux VPS hosts"
license = "MIT"

[lib]
name = "toride_updates"
path = "src/lib.rs"

[[bin]]
name = "toride-updates"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["client", "doctor"]
client = ["dep:duct"]
doctor = ["service"]
# `service` now links toride-service so ServiceManager can delegate real
# systemctl calls through toride_service::ServiceManager.
service = ["client", "dep:toride-service"]
config = ["client", "dep:regex"]
apt = ["client"]
dnf = ["client"]
schedule = ["client"]
serde = ["dep:serde", "dep:serde_json"]
## CLI argument parsing + dispatch.
## Implies the full client stack (client/doctor/service/config/schedule/serde)
## so the `toride-updates` binary can dispatch every subcommand to a real
## client / doctor / schedule-manager call.
cli = ["dep:clap", "client", "doctor", "service", "config", "schedule", "serde"]

[dependencies]
toride-runner = { path = "../toride-runner" }
toride-fs = { path = "../toride-fs" }
toride-diagnostic-types = { path = "../toride-diagnostic-types" }
toride-service = { path = "../toride-service", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
duct = { version = "1", features = ["timeout"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
regex = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
insta = "1"
tempfile = "3"
assert_fs = "1"
proptest = "1"
toride-runner = { path = "../toride-runner", features = ["fake"] }

[lints]
workspace = true
