[package]
name = "toride-users"
version = "0.1.0"
edition = "2024"
description = "OS-level user, sudo, PAM, and 2FA management"
license = "MIT"

[[bin]]
name = "toride-users"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["client", "doctor"]

# === Capability features ===

## `useradd`/`usermod`/`userdel` wrapper, group management, command runner.
client = ["dep:duct"]

## Service management for user-related daemons.
service = ["client", "dep:toride-service"]

## Diagnostic engine for user/access control security checks.
doctor = ["service"]

## Config file parsing and rendering.
##
## Implies `serde`: the config surface (`UsersConfig::read`/`write`/
## `from_json`/`to_json`) is JSON-backed, so enabling `config` pulls in the
## serde derives and `serde_json` automatically. Without this implication the
## config API would compile but every call would fail at runtime with
## "serde feature is required".
config = ["client", "serde", "dep:regex", "dep:dirs"]

## TOTP/2FA enrollment via `google-authenticator`.
totp = ["client"]

## Serde serialization for spec and report types.
serde = ["dep:serde", "dep:serde_json"]

## CLI argument parsing and dispatch.
##
## Implies `client`: [`Cli::dispatch`](crate::cli::Cli::dispatch) drives a
## [`UsersClient`](crate::client::UsersClient), so the `cli` feature pulls in
## the client facade automatically.
cli = ["client", "dep:clap"]

[dependencies]
toride-runner = { path = "../toride-runner" }
toride-fs = { path = "../toride-fs" }
toride-diagnostic-types = { path = "../toride-diagnostic-types" }
toride-service = { path = "../toride-service", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

# --- Optional (feature-gated) ---
duct = { version = "1", features = ["timeout"], optional = true }
dirs = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
regex = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
insta = "1"
tempfile = "3"
assert_fs = "1"
proptest = "1"

[lints]
workspace = true
