[package]
name = "toride-wireguard"
version = "0.1.0"
edition = "2024"
description = "WireGuard VPN tunnel management"
license = "MIT"

[features]
default = ["client", "doctor"]
client = ["dep:duct", "toride-runner/duct-runner"]
doctor = ["service"]
service = ["client", "dep:toride-service"]
config = ["client", "dep:regex"]
serde = ["dep:serde", "dep:serde_json"]
# The `cli` feature pulls in clap *and* the runner-backed backing modules
# (`client`, `doctor`, `service`) so the dispatch in `cli.rs` can wire every
# `WireguardCommand` to a real client call. The binary target also requires
# `toride-runner/duct-runner` for the production runner.
cli = ["dep:clap", "client", "doctor", "service", "toride-runner/duct-runner"]

[[bin]]
name = "toride-wireguard"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
toride-runner = { path = "../toride-runner", default-features = false }
toride-fs = { path = "../toride-fs" }
toride-diagnostic-types = { path = "../toride-diagnostic-types" }
toride-service = { path = "../toride-service", optional = true, default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
duct = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
regex = { version = "1", optional = true }
similar = "2"
zeroize = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
insta = "1"
tempfile = "3"
assert_fs = "1"
proptest = "1"
toride-runner = { path = "../toride-runner", default-features = false, features = ["fake"] }

[lints]
workspace = true
