[package]
name = "toride"
version = "0.1.0"
edition = "2024"

[lib]
name = "toride"
path = "src/lib.rs"

[[bin]]
name = "toride"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
unicode-width = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
tachyonfx = "0.25.0"
tokio = { workspace = true }
futures = "0.3"
color-eyre = "0.6"
ratatui-interact = "0.5.3"

toride-ssh = { path = "../toride-ssh", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
toride-status = { path = "../toride-status" }
rattles = "0.3.1"

[dev-dependencies]
insta = "1"
serde_json = { workspace = true }
tempfile = "3"
testty = "0.9"

[lints]
workspace = true
