[package]
name = "toride"
version = "0.1.0"
edition = "2024"

[lib]
name = "toride"
path = "src/lib.rs"

[[bin]]
name = "toride"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
unicode-width = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
tachyonfx = "0.25.0"
tokio = { workspace = true }
futures = "0.3"
color-eyre = "0.6"
ratatui-interact = "0.5.3"

toride-ssh = { path = "../toride-ssh", features = ["full"] }
ssh-key = { version = "0.7.0-rc.10", features = ["ed25519", "rsa", "p256", "crypto", "std"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { workspace = true }
serde_json = { workspace = true }
toride-status = { path = "../toride-status" }
rattles = "0.3.1"
libc = "0.2"
dirs = { workspace = true }

# ── Live-data backend crates (read-only Phase 1 integrations) ────────────────
# Feature sets chosen for live read data + doctor diagnostics; write-paths land
# in Phase 2. Most crates default to ["client","doctor"]; the three below add
# the extra surfaces their live view needs.
toride-fail2ban = { path = "../toride-fail2ban" }
toride-monitor = { path = "../toride-monitor" }
toride-wireguard = { path = "../toride-wireguard" }
toride-harden = { path = "../toride-harden" }
toride-updates = { path = "../toride-updates" }
toride-users = { path = "../toride-users" }
toride-proxy = { path = "../toride-proxy" }
toride-cloud = { path = "../toride-cloud" }
toride-backup = { path = "../toride-backup" }
toride-tailscale = { path = "../toride-tailscale" }
toride-audit = { path = "../toride-audit", features = ["client", "doctor", "auditd", "integrity", "logs"] }
toride-mise = { path = "../toride-mise", features = ["json", "toml", "diagnostics", "tracing"] }
ufw-kit = { path = "../ufw-kit", features = ["client", "doctor", "tokio"] }
which = { workspace = true }

[dev-dependencies]
insta = "1"
serde_json = { workspace = true }
tempfile = "3"
testty = "0.9"

[lints]
workspace = true
