[package]
name = "toride-ssh-agent"
version = "0.1.0"
edition = "2024"

[features]
default = []
native = ["dep:ssh-agent-lib"]

[dependencies]
toride-ssh-core = { path = "../core" }
tokio = { workspace = true, features = ["process", "fs", "rt", "sync"] }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
ssh-agent-lib = { version = "0.6", optional = true }
ssh-key = { version = "0.7.0-rc.10", features = ["ed25519", "rsa", "std"] }
duct = "1"
libc = "0.2"
base64 = "0.22"
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
