[package]
name = "toride-ssh-authorized-keys"
version = "0.1.0"
edition = "2024"

[dependencies]
toride-ssh-core = { path = "../core" }
toride-fs = { path = "../../../toride-fs" }
tokio = { workspace = true, features = ["process", "fs", "rt", "sync"] }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
ssh-key = { version = "0.7.0-rc.10", features = ["ed25519", "rsa", "p256", "crypto", "std"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
