[package]
name = "toride-ssh-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ssh-key = { version = "0.7.0-rc.10", features = ["ed25519", "rsa", "p256", "crypto", "std"] }
tokio = { workspace = true, features = ["process", "fs", "rt", "sync"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
async-trait = { workspace = true }
toride-fs = { path = "../../../toride-fs" }
toride-runner = { path = "../../../toride-runner", features = ["tokio-runner", "fake"] }
toride-diagnostic-types = { path = "../../../toride-diagnostic-types" }
duct = "1"
libc = "0.2"
base64 = "0.22"
gethostname = "0.5"
# `tempfile` is a runtime dependency: WriteSshdConfig stages the new
# sshd_config in an O_EXCL, unpredictable-named temp file in the *same
# directory* as the target (so the install is an atomic rename within one
# filesystem, and `sshd -t` resolves relative `Include` directives correctly).
tempfile = { workspace = true }

[lints]
workspace = true
