[package]
name = "toride-ssh-forward"
version = "0.1.0"
edition = "2024"

[dependencies]
toride-ssh-core = { path = "../core" }
tokio = { workspace = true, features = ["process", "fs", "rt", "sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }
duct = "1"
libc = "0.2"
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[lints]
workspace = true
